<resources>
    <string name="app_name">LECHAL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="permission_reason_bluetooth">Grant Bluetooth access permission to scan pods</string>
    <string name="permission_reason_location">Grant Location access permission to scan pods</string>
    <string name="alert_title_pods_found">Pods Found</string>
    <string name="scanning_pods">Scanning pods</string>
    <string name="scan_stopped">Scan stopped</string>
    <string name="connecting_to_pods">Connecting to Pods</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_notification">Notifications</string>
    <string name="action_add_pods">Add</string>
    <string name="pods_connection_hint_keep_close">Make sure the pods are close to\nyour phone</string>
    <string name="enter_destination">Enter destination</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_distance">SELECT DISTANCE</string>
    <string name="meters_1000">1000m</string>
    <string name="meters_500">500m</string>
    <string name="meters_200">200m</string>
    <string name="meters_150">150m</string>
    <string name="meters_new">Now</string>
    <string name="select_pod">SELECT POD</string>
    <string name="left_pod">Left</string>
    <string name="right_pod">Rright</string>
    <string name="select_turn">SELECT A TURN</string>
    <string name="slight_turn">Slight Turn</string>
    <string name="u_turn">U-Turn</string>
    <string name="turn">Turn</string>
    <string name="keep_straight">Keep Straight</string>
    <string name="sharp_turn">Sharp Turn</string>
    <string name="destination">Destination</string>
    <string name="independent_feedback">INDEPENDENT FEEDBACK</string>
    <string name="ree_route">Re-route</string>
    <string name="look_at_your_phone">Look at your phone</string>
    <string name="destination_reached">Destination Reached</string>
    <string name="vibrations">VIBRATIONS</string>
    <string name="intensity">Intensity</string>
    <string name="very_high">Very high</string>
    <string name="Tutorials">Tutorials</string>
    <string name="footwear">FOOTWEAR</string>
    <string name="type">Type</string>
    <string name="insole">Insole</string>
    <string name="pods">PODS</string>
    <string name="disconnect">Disconnect</string>
    <string name="rename">Rename</string>
    <string name="about">About</string>
    <string name="swap">swap</string>
    <string name="save">Save</string>
    <string name="title_activity_intensity_actity">IntensityActity</string>
    <string name="title_activity_vibration_tutorial">Vibration tutorials</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="shoe_type">shoetype</string>
    <string name="essential_pods">ESSENTIAL PODS</string>
    <string name="bing_pods">Bing Pod</string>
    <string name="last_sync">Last synced at :3:58PM</string>
    <string name="vibintensityRight">vibintensityRight</string>
    <string name="vibintensity">vibintensity</string>
    <string name="start_session">Choose mode</string>
    <string name="set_session_goal">Set session goal</string>
    <string name="save_completed_session">Save completed session</string>
    <string name="dont_my_save">DON\'T SAVE</string>
    <string name="next">NEXT</string>
    <string name="cancel">CANCEL</string>
    <string name="start">START</string>
    <string-array name="goals_array">
        <item>Calories</item>
        <item>Steps</item>
        <item>Distance</item>
        <item>Time</item>
    </string-array>
    <string-array name="height_array">
        <item>Feet</item>
        <item>Centimeters</item>
    </string-array>
    <string-array name="weight_array">
        <item>Kilograms</item>
        <item>Pounds</item>
    </string-array>
    <string name="edit_profile">Edit profile</string>
    <string name="clear_achievements">Clear achievements</string>
    <string name="allow_global_tracking">Allow global tracking</string>
    <string name="edit_daily_goal">Edit daily goals</string>
    <string name="share_completed_steps">Share completed steps</string>
    <string name="view_saved_session">View clear_achievementssaved session</string>
    <string name="daily_steps_count">Daily step count</string>
    <string name="walk10000_desc">An average human being walks about 5,500 steps a day.Dot\'t be an average human being.Switch to a healthire lifestyle by incorporating more Lechal steps in your day.</string>
    <string name="cal">Calories burnt are based are base on individual\'s height,weight and gender</string>

    <string name="full_name">FULL NAME</string>
    <string name="country">COUNTRY</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="emil">EMAIL ADDRESS</string>
    <string name="phone_number">REGISTERED PHONE NUMBER</string>
    <string name="emergency_contact">EMERGENCY CONTACT</string>
    <string-array name="country">
        <item>Hong Kong</item>
        <item>Hungry</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
    </string-array>
    <string-array name="avoid">
        <item>Ferry</item>
        <item>Dirty Roads</item>
        <item>Highway</item>
        <item>Park</item>
        <item>Toll Road</item>
        <item>Tunnel</item>
        <item>Shuttle Train</item>
        <item>Car Pool</item>
    </string-array>
    <string name="title_activity_download_map">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="manage_maps">Manage maps</string>
    <string name="yes">YES</string>
    <string name="edit_daily_goals">Edit daily goals</string>

    <string name="action_waypoint">Add a way point</string>
    <string name="action_trafic">Traffic</string>
    <string name="action_satellite">Satellite</string>
    <string name="action_public_transport">Public Transport</string>
    <string name="action_share_directions">Share Directions</string>
    <string name="action_voice">Voice</string>
    <string name="action_normal">Normal</string>
    <string name="action_terrain">Terrain</string>
    <string name="action_reverse">Reverse</string>
    <string name="action_add_friend_journey">Add a friend to the journey</string>
    <string name="action_route_options">Route Options</string>
</resources>
