<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ducere.lechal.pod.settingsactivity.NavigationSettings">
    <item
        android:id="@+id/action_way_point"
        android:orderInCategory="100"
        android:title="@string/action_waypoint"
        app:showAsAction="never" />


    <group android:id="@+id/group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_normal"
            android:orderInCategory="100"
            android:title="@string/action_normal"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_satellite"
            android:orderInCategory="100"
            android:title="@string/action_satellite"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_terrain"
            android:orderInCategory="100"
            android:title="@string/action_terrain"
            app:showAsAction="never" />


    </group>
    <item
        android:id="@+id/action_traffic"
        android:orderInCategory="100"
        android:checkable="true"
        android:title="@string/action_trafic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_public_transit"
        android:orderInCategory="100"
        android:checkable="true"
        android:title="@string/action_public_transport"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_directions"
        android:orderInCategory="100"
        android:title="@string/action_share_directions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_voice"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/action_voice"
        app:showAsAction="never" />

</menu>
